// Generated by github.com/davyxu/tabtoy
// Version: 2.9.1
// Modify by nuyan
// DO NOT EDIT!!

syntax = "proto3";

package gameconf;

import "gameconf/game_type.proto";



// Defined in table: GameBaseConfig
message GameBaseConfig
{	
	
	
	repeated DoNotUseThisDefine DoNotUseThis = 1; // DoNotUseThis
	
	
	repeated GlobalconfDefine Globalconf = 2; // Globalconf
	
	
	repeated HeroDefine Hero = 3; // Hero
	
	
	repeated SkillConfDefine SkillConf = 4; // SkillConf
	
	
	repeated BuffConfDefine BuffConf = 5; // BuffConf

}

// Defined in table: Globalconf
message AutoFightMatchRule
{	
	
	// 阶段
	int32 Status = 1; 
	
	// 秒
	int32 Secord = 2; 
	
	// 范围低
	int32 RangeMin = 3; 
	
	// 范围高
	int32 RangeMax = 4; 

}

// Defined in table: Globalconf
message RPGMatchRule
{	
	
	// 秒
	int32 Second = 1; 
	
	// 战力
	int32 Power = 2; 

}

// Defined in table: Globalconf
message GlobalconfDefine
{	
	
	
	int32 PhaseShowDescSec = 1; // 展示词时间（秒）
	
	
	int32 PhaseDescSec = 2; // 描述时间（秒）
	
	
	int32 PhaseVoteSec = 3; // 投票时间（秒）
	
	
	int32 PhaseEndSec = 4; // 每个结束回合阶段时间（秒）
	
	
	int32 PhaseShowResultSec = 5; // 结算展示时间（秒）
	
	
	repeated Int32KV NoticeReadyCondition = 6; // 通知准备条件(8,4代表8人座位,4人准备就通知准备）
	
	
	int32 NoticeReadySec = 7; // 通知准备倒计时（秒）
	
	
	int32 GameMaxTimeMinute = 8; // 游戏最大时间（单位分，超过此时间判卧底赢）
	
	
	uint32 RoomSettingMinPlayerCount = 9; // 房间最小人数
	
	
	uint32 RoomSettingMaxPlayerCount = 10; // 房间最大人数
	
	
	uint32 RoomSettingDefaultPlayerCount = 11; // 房间默认人数
	
	
	string RoomSettingDefaultRoomName = 12; // 房间默认名字
	
	
	bool RoomSettingDefaultAllowEnter = 13; // 房间是否允许进
	
	
	int32 OpSecWhenUserLeave = 14; // 离开玩家（包括离线）的操作时间（语音场描述阶段）
	
	
	int32 OperationTime = 15; // 出牌阶段时间限制(秒)
	
	
	int32 CampHP = 16; // 军营初始血量(同时也是血量上限）
	
	
	int32 HandCardCount = 17; // 手牌数上限
	
	
	int32 CardPoolCount = 18; // 初始卡池数量
	
	
	int32 CommonActionPoint = 19; // 玩家行动点上限
	
	
	int32 FirtstRoundActionPoint = 20; // 第一个操作的玩家在第一回合的行动点上限
	
	
	int32 HeavyCost = 21; // 重装武将一次行动所消耗的行动点
	
	
	int32 CommonCost = 22; // 普通武将一次行动所消耗的行动点

}

// Defined in table: Hero
message HeroDefine
{	
	
	
	int32 HeroID = 1; // 武将唯一ID
	
	
	string Name = 2; // 武将名称
	
	
	CountryTyp Country = 3; // 武将国籍(停载)
	
	
	GenderTyp Gender = 4; // 武将性别(停载)
	
	
	int32 HP = 5; // 初始体力
	
	
	int32 Attack = 6; // 初始攻击力
	
	
	int32 SkillID = 7; // 技能ID
	
	
	string IconPath = 8; // 武将图标
	
	
	bool IsHeavy = 9; // 武将是否为重装

}

// Defined in table: SkillConf
message SkillConfDefine
{	
	
	
	int32 SkillID = 1; // 技能ID
	
	
	string Name = 2; // 技能名
	
	
	string Desc = 3; // 通用描述
	
	
	SkillTyp SkillType = 4; // 技能类型
	
	
	int32 SelectCardCount = 6; // 操作类翻牌技作用对象数量
	
	
	AreaTyp GainAreaType = 7; // 区域增益（数量加1）
	
	
	repeated int32 Buffs = 8; // 该技能会产生的buff
	
	
	int32 Value1 = 9; // 技能涉及的数值（对应buff涉及的数值请在buff表配置）
	
	
	int32 Value2 = 10; 

}

// Defined in table: BuffConf
message BuffConfDefine
{	
	
	
	int32 BuffID = 1; // 技能ID
	
	
	string Name = 2; // 技能名
	
	
	string Desc = 3; // 通用描述
	
	
	string IconPath = 4; 
	
	
	bool IsOverlap = 5; 
	
	
	int32 BuffAttack = 6; // 攻击相关数值（区分正负）
	
	
	int32 BuffHP = 7; // 血量相关数值（区分正负）
	
	
	int32 BuffDamage = 8; // 伤害相关数值（绝对值）
	
	
	int32 ExpireV = 9; // buff生命周期（次数或者回合数）

}

